Homepage spacing fixes.

--- a/web/static/css/marketing.scss
+++ b/web/static/css/marketing.scss
@@ -45,7 +45,7 @@ li {
   color: $gray-darkest;
   font-size: 1.5626rem;
   line-height: 1.44;
-  margin: 1em auto;
+  margin: 5.5rem auto 1em;
   max-width: 38rem;
   text-align: center;
 
@@ -72,7 +72,7 @@ li {
 
 .button-style__a {
   background-color: $white;
-  border: $base-border;
+  border: 1px solid $gray-light;
   border-radius: 2rem;
   box-shadow: 0 1px 4px 0 lighten($gray-lighter, 4%);
   display: inline-block;
@@ -301,6 +301,7 @@ li {
 
 .two-columns {
   display: flex;
+  margin-top: -1rem;
 }
 
 .column {
@@ -314,5 +315,6 @@ li {
 hr {
   border: none;
   border-top: 1px solid $base-border-color;
+  margin: 2.5rem auto;
   max-width: 35rem;
 }
